# DSA

./: .clang-format  .gitignore  CMakeKits.json  CMakeLists.txt  CMakePresets.json  README.md
Advance/: README.md
Advance/Battle_City/: main.cpp
Advance/Bishop/: solution2.cpp
Advance/Fast_robot/: main.cpp
Advance/Grid_Acid/: main.cpp
Advance/Hugo/: main.cpp
Advance/Hugo_Gold_Miner_2/: main.cpp
Advance/Pizza_Location/: solution.cpp
Advance/Upgrade_Computer/: main.cpp
Advance/Well_Project/: solution.cpp
Bacteria/: CMakeLists.txt  main.cpp  solution.cpp  solution2.cpp  temp.cpp
Civilization/: CMakeLists.txt  main.cpp  solution.cpp
Constellation_Search/: CMakeLists.txt  main.cpp  solution.cpp
Constellation_Search_2/: CMakeLists.txt  solution2.cpp
Dictionary/: solution.cpp
Dungeon_escape/: main.cpp  solution.cpp  temp1.cpp
Image_Searching/: main.cpp  solution.cpp  temp.cpp  temp2.cpp  temp3.cpp
Memory_System/: solution.cpp  temp1.cpp
Microorganism/: CMakeLists.txt  main.cpp  solution.cpp  solution2.cpp
Morning_Commute_Radio/: main.cpp  solution.cpp
Notepad_Program/: main.cpp  solution.cpp  temp.cpp
Online_Streamer/: solution.cpp  temp.cpp  temp2.cpp
Pro/Bacteria/: main.cpp  solution2.cpp
Pro/Civilization/: solution.cpp
Pro/Constellation_Search/: main.cpp
Pro/Dictionary/: main.cpp  sample_input.txt  solution.cpp  solution2.cpp  solution3.cpp
Pro/Dungeon_escape/: solution.cpp
Pro/Image_Searching/: main.cpp  solution.cpp
Pro/Memory_System/: main.cpp  solution.cpp
Pro/Microorganism/: solution2.cpp
Pro/Online_Streamer/: main.cpp
Pro/Reserved_bus/: main.cpp  solution.cpp
Pro/Scattered_Constellation_Tiles/: CMakeLists.txt  main.cpp  solution.cpp
Pro/Soldier_Management/: main.cpp  solution.cpp
Pro/Stock_Price/: bruh.cpp
Pro/Survival_Train/: main.cpp  solution.cpp
Pro/Toll_Discount/: main.cpp  solution.cpp
Pro/Value_of_Restaurant/: CMakeLists.txt  main.cpp
Pro/Vocab_Sheet/: main.cpp  solution.cpp
Pro/Web_Service/: main.cpp  solution.cpp
Pro/Word_Search/: solution.cpp  solution2.cpp
Push/: main.cpp  solution.cpp
Reserved_bus/: main.cpp  solution.cpp
Scattered_Constellation_Tiles/: sample_input_small.txt  solution.cpp
Secondhand_Market_App/: app.cpp  attempt1.cpp  attempt2.cpp  attempt3.cpp  attempt4.cpp  main.cpp  solution.cpp
Soldier_Management/: main.cpp  solution.cpp  temp1.cpp  temp2.cpp  temp3.cpp
Stock_Price/: bruh.cpp  main.cpp  solution.cpp  temp.cpp
Survival_Train/: README.md  solution.cpp
Table_of_Ranking/: main.cpp  solution.cpp
Test/: main.cpp
Toll_Discount/: solution.cpp
TreeSet/: main.cpp  temp.cpp
User_Problems/BasicTrie/: CMakeLists.txt  input_small.txt  main.cpp  output.txt  solution.cpp  solution2.cpp
User_Problems/Howard_and_Convenience_Store/: CMakeLists.txt
User_Problems/LinkedList/: main.cpp
Value_of_Restaurant/: app.cpp  main.cpp  solution.cpp  temp.cpp  temp2.cpp
Vocab_Sheet/: main.cpp  solution.cpp  temp.cpp  temp2.cpp
Water_Tank_Installing/: main.cpp  solution.cpp  temp.cpp
Web_Service/: Session.vim  main.cpp  solution.cpp  temp.cpp
Word_Search/: Session.vim  main.cpp  solution.cpp  temp1.cpp
common/LinkedList/: list.cpp
common/List/: list.hpp
common/Trie/: CMakeLists.txt  main.cpp  trie.hpp
scripts/: format.bat  format.ps1
