get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
add_executable(${PROJECT_NAME} main.cpp solution.cpp)
add_executable(${PROJECT_NAME}2 main.cpp solution2.cpp)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/input_small.txt ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
